--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
             <p>Digitando...</p>
           </div>
 
-          <div class="num-mensagens">
-            <span>10</span>
-            <p>2:45</p>
-          </div>
+          <div>qualquer coisa</div>
         </div>
 
         <div class="mensagem">
